<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.harmonicatulashop.ui.account.viewmodels.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.activities.SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/login_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_field_red"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_login"
                android:text=""
                android:inputType="textPersonName"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_red" />

            <TextView
                android:id="@+id/password_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:text="@string/password_field_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_red" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:onClick="@{()->viewModel.onClickSignInButton()}"
                android:text="@string/sign_in"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80e0e0e0"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>